[FIX] Wrong background image url.

--- a/mods/trunk/themes/litejazz_tiki_3/styles/litejazz.css
+++ b/mods/trunk/themes/litejazz_tiki_3/styles/litejazz.css
@@ -50,7 +50,7 @@ td#main-header {
 	background: #170808 url(litejazz/header.jpg) 100% 0 no-repeat;
 	vertical-align: bottom}
 
-tr#midrow {background: #fff url(litejazz/options/blue/body-bg.png) 0 0 repeat-x}
+tr#midrow {background: #fff url(litejazz/body-bg.png) 0 0 repeat-x}
 
 td#leftcolumn {
 	width: 180px;
